Fix bug 484328: Kmail config dialog takes about 40 seconds to show up

It loads all list of qlocale and show translated name
but it will search to display translated name => it will search
which font used. but we don't have all font
=> it will take time to search another one.

=> now we don't translate name.

BUG: 484328
FIXED-IN: 1.5.4